time display fixed, css for fixed height lists, google scrollbars, but commented and unfinished badges

--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -21,11 +21,6 @@ body {
     letter-spacing: -1px;
 }
 
-.list-box {
-  max-height: 600px;
-  overflow: auto;
-}
-
 .ellipsize {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -73,3 +68,39 @@ input::-webkit-slider-thumb {
   -webkit-flex: 1 1 auto;
 }
 
+.list-box {
+  height: 560px;
+  overflow: auto;
+}
+/*
+::-webkit-scrollbar {
+  height: 16px;
+  overflow: visible;
+  width: 16px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0,0,0,.2);
+  background-clip: padding-box;
+  border: solid transparent;
+  border-width: 1px 1px 1px 6px;
+  min-height: 28px;
+  padding: 100px 0 0;
+  box-shadow: inset 1px 1px 0 rgba(0,0,0,.1),inset 0 -1px 0 rgba(0,0,0,.07);
+}
+
+::-webkit-scrollbar-button {
+  height: 0;
+  width: 0;
+}
+
+::-webkit-scrollbar-track {
+  background-clip: padding-box;
+  border: solid transparent;
+  border-width: 0 0 0 4px;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
+*/
